# softcore-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  arch-mret.sail  arch2.sail  arch3.sail  call_set.ml  call_set.mli  cliff.toml  context.ml  context_pass.ml  context_pass.mli  doc.md  dune  dune-project  fun_defs.ml  fun_defs.mli  justfile  manual_fixes.py  readme.md  rust_gen.ml  rust_transform.ml  rust_transform.mli  sail_plugin_virt.ml  sail_rust_backend.install  sail_to_rust.ml  sail_to_rust.mli  sail_virt_backend.install  stats.py  virt-sail  z3_problems
armv9a/: Cargo.toml  readme.md
armv9a/src/: arch_prelude.rs  lib.rs  raw.rs
prelude/: Cargo.toml
prelude/src/: lib.rs
riscv/: Cargo.toml
riscv/src/: lib.rs  raw.rs
rust_arch/mret/src/: lib.rs  mirage.rs  sail.rs
rv64/: Cargo.toml
rv64/src/: arch_prelude.rs  config.rs  lib.rs  raw.rs  registers.rs
sail_arch/: basic.sail  basic_types.sail  decoder.sail  hoisting.sail  mret.sail  trap.sail  types.sail
sail_models/: arm.patch  riscv.patch
sail_prelude/: Cargo.toml
sail_prelude/src/: lib.rs
sail_rust_backend/: call_set.ml  context.ml  core_config.ml  dune  rust_backend.ml  rust_backend.mli  rust_gen.ml  rust_transform.ml  sail_plugin_rust.ml  types.ml
sail_rust_backend/arch/: arch.ml  armv9a.ml  rv64.ml
src/: lib.rs
tests/basic/: Cargo.toml  arch.rs
tests/basic/src/: arch.rs
tests/basic_alt/: Cargo.toml  arch.rs
tests/basic_alt/src/: arch.rs
tests/config/: Cargo.toml  arch.rs
tests/config/src/: arch.rs
tests/csr/: Cargo.toml  arch.rs
tests/csr/src/: arch.rs  lib.rs
tests/decoder/: arch.rs
tests/hoisting/: Cargo.toml  arch.rs
tests/hoisting/src/: arch.rs
tests/mret/: Cargo.toml  arch.rs  lib.rs
tests/mret/src/: arch.rs
tests/optimization/: arch.rs
tests/trap/: Cargo.toml  arch.rs
tests/trap/src/: arch.rs
tests/types/: Cargo.toml  arch.rs  arch.sail
tests/types/src/: arch.rs
tests/wfi/: Cargo.toml  arch.rs
tests/wfi/src/: arch.rs
