[workspace]
resolver = "2"
members = [
    # The Rust prelude, shared by all generated models
    "sail_prelude",

    # The RISC-V Sail model
    "riscv",

    # Our tests
    "tests/basic",
    "tests/basic_alt",
    "tests/trap",
    "tests/types",
    "tests/mret",
    "tests/csr",
    "tests/wfi",
]
