(env
  (dev
    (flags (:standard -w -33 -w -27 -w -32 -w -26 -w -37)))
  (release
    (flags (:standard -w -33 -w -27 -w -32 -w -26 -w -37))))

(executable
  (name sail_plugin_virt)
  (modes (native plugin))
  (modules sail_plugin_virt rust_gen call_set)
  (libraries libsail))

(install
  (section (site (libsail plugins)))
  (package sail_virt_backend)
  (files sail_plugin_virt.cmxs))
